--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,16 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <h1>Task4Home</h1>
+  <div id="contenedor">
+    <ion-input inputmode="email" placeholder=" Email"></ion-input>
+    <br>
+    <ion-input inputmode="password" placeholder=" Password"></ion-input>
+    <ion-router-link href="#">Forgot your password?</ion-router-link>
+    <div id="checkbox">
+      <ion-checkbox unchecked slot="start"></ion-checkbox>
+      <ion-label> Remember me</ion-label>
+    </div>
+    <ion-button id="btnlogin" (click)="goWelcomePage()" expand="block">Login</ion-button>
+    <ion-button id="btnregister" (click)="goRegisterPage()" expand="block">Register</ion-button>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
   </div>
 </ion-content>
