--- a/src/app/pages/register/register.page.scss
+++ b/src/app/pages/register/register.page.scss
@@ -1,18 +1,18 @@
 @font-face {
   font-family: Bai;
-  src: url("../../assets/fonts/BaiJamjuree-Regular.ttf"),
-    url("../../assets/fonts/BaiJamjuree-Regular.ttf");
+  src: url("../../../assets/fonts/BaiJamjuree-Regular.ttf"),
+  url("../../../assets/fonts/BaiJamjuree-Regular.ttf");
 }
 
 @font-face {
   font-family: Montse;
-  src: url("../../assets/fonts/Montserrat-Bold.ttf"),
-    url("../../assets/fonts/Montserrat-Regular.ttf");
+  src: url("../../../assets/fonts/Montserrat-Regular.ttf"),
+    url("../../../assets/fonts/Montserrat-Bold.ttf");
 }
 
 h1 {
   text-align: center;
-  margin-top: 70px;
+  margin-top: 50px;
   font-size: 2.5em;
   font-weight: bold;
   font-family: Bai;
@@ -31,7 +31,7 @@ h1 {
     rgba(9, 0, 155, 1) 0%,
     rgba(0, 255, 255, 1) 100%
   );
-  height: 350px;
+  height: 400px;
   border-radius: 10%;
 }
 
@@ -50,32 +50,22 @@ ion-input {
   --background-hover: #ca8403; 
   --border-radius: 12px;
   font-family: Montse;
-  margin: 20px;
-  margin-top: 130px;
+  margin-left: 40px;
+  margin-right: 40px;
+  margin-top: 55px;
   color: black;
   font-weight: bold;
-}
-
-#btnregister {
-  --border-radius: 12px;
-  --background: rgb(43, 153, 243);
-  margin-top: -10 px;
-  margin-left: 60px;
-  font-family: Montse;
-  margin-right: 60px;
-  padding: 5px;
-  border-radius: 100px;
-  // margin-top: 5px;
-  color: black;
-  font-weight: bold;
-  font-size: 10px;
+  font-size: 0.7em;
+  
 }
 
 ion-router-link {
   position: absolute;
-  top: 300px;
+  top: 510px;
   font-weight: bold;
-  left: 100px;
+  text-align: center;
+  left: 60px;
+  color: black;
   font-family: Bai;
   font-size: 0.7em;
 }
