--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -4,7 +4,7 @@
     <ion-input inputmode="email" placeholder=" Email"></ion-input>
     <br>
     <ion-input inputmode="password" placeholder=" Password"></ion-input>
-    <ion-router-link href="#">Forgot your password?</ion-router-link>
+    <ion-router-link >Forgot your password?</ion-router-link>
     <div id="checkbox">
       <ion-checkbox unchecked slot="start"></ion-checkbox>
       <ion-label> Remember me</ion-label>
