--- a/src/app/pages/users/users.page.scss
+++ b/src/app/pages/users/users.page.scss
@@ -1,3 +1,19 @@
+@font-face {
+  font-family: Bai;
+  src: url("../../../assets/fonts/BaiJamjuree-Regular.ttf"),
+    url("../../../assets/fonts/BaiJamjuree-Regular.ttf");
+}
+
+@font-face {
+  font-family: Montse;
+  src: url("../../../assets/fonts/Montserrat-Regular.ttf"),
+    url("../../../assets/fonts/Montserrat-Bold.ttf");
+}
+
+*{
+  font-family: Montse;
+}
+
 ion-item {
   margin: 20px;
   border-radius: 10px;
@@ -8,7 +24,12 @@ ion-tab-bar {
 }
 
 #pressIcon {
-  background-color: blue;
+  background: rgb(9, 0, 155);
+  background: linear-gradient(
+    198deg,
+    rgba(9, 0, 155, 1) 0%,
+    rgba(0, 255, 255, 1) 100%
+  );
   padding: 8px;
   border-radius: 20px;
 }
