--- a/src/app/pages/prizes/prizes.page.html
+++ b/src/app/pages/prizes/prizes.page.html
@@ -1,9 +1,37 @@
-<ion-header>
+<ion-header translucent>
   <ion-toolbar>
-    <ion-title>prizes</ion-title>
+    <ion-icon slot="start" style="margin-left: 10px;" (click)="goLoginPage()" name="arrow-back"></ion-icon>
+    <ion-title>Prizes</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
 
+<ion-content>
+    <!-- <ion-item *ngFor="let u of usersService.getUsers()" color="light">
+      <ion-avatar slot="start" >
+        <img *ngIf="u.image" [src]="u.image">
+        <img *ngIf="!u.image" src="../../assets/img/default.png">
+      </ion-avatar>
+      <ion-label>
+        <h2>{{u.name}}</h2>
+        <h3>» {{u.username}}</h3>
+      </ion-label>
+      <ion-icon (click)="masInfo(u)" name="ellipsis-vertical"></ion-icon>
+    </ion-item> -->
+  <ion-tabs>
+    <ion-tab-bar slot="bottom">
+      <!-- BOTON DE USUARIO -->
+      <ion-tab-button tab="user" (click)="goToUser()">
+        <ion-icon name="person-outline" color="dark"></ion-icon>
+      </ion-tab-button>
+      <!-- BOTON DE TAREAS -->
+      <ion-tab-button tab="fav" (click)="goToTasks()">
+        <ion-icon name="reader-outline" color="dark"></ion-icon>
+      </ion-tab-button>
+      <!-- BOTON DE PREMIOS -->
+      <ion-tab-button tab="exit">
+        <ion-icon id="pressIcon" name="gift" color="dark"></ion-icon>
+      </ion-tab-button>
+    </ion-tab-bar>
+  </ion-tabs>
 </ion-content>
