--- a/src/app/pages/tasks/tasks.page.html
+++ b/src/app/pages/tasks/tasks.page.html
@@ -1,9 +1,39 @@
-<ion-header>
+<ion-header translucent>
   <ion-toolbar>
-    <ion-title>tasks</ion-title>
+    <ion-icon slot="start" style="margin-left: 10px;" (click)="goLoginPage()" name="arrow-back"></ion-icon>
+    <ion-title>Tasks</ion-title>
+    <ion-icon slot="end" style="margin-right: 10px;" (click)="goLoginPage()" name="add"></ion-icon>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-item *ngFor="let t of tasksService.getTasks()" color="light">
+    <ion-label>
+      <h2>{{t.name}}</h2>
+      <ion-icon *ngIf="t.stars >= 1" name="star"></ion-icon>
+      <ion-icon *ngIf="t.stars >= 2" name="star"></ion-icon>
+      <ion-icon *ngIf="t.stars >= 3" name="star"></ion-icon>
+      <ion-icon *ngIf="t.stars >= 4" name="star"></ion-icon>
+      <ion-icon *ngIf="t.stars >= 5" name="star"></ion-icon>
+      <h3> + {{t.points}} p</h3>
+    </ion-label>
+    <ion-icon style="color: greenyellow;" *ngIf="t.selected==false" (click)="changeSelected(t)" name="checkmark"></ion-icon>
+    <ion-icon style="color: red;" *ngIf="t.selected==true" (click)="changeSelected(t)" name="close"></ion-icon>
+  </ion-item>
+  <ion-tabs>
+    <ion-tab-bar slot="bottom">
+      <!-- BOTON DE USUARIO -->
+      <ion-tab-button tab="user" (click)="goToUser()">
+        <ion-icon name="person-outline" color="dark"></ion-icon>
+      </ion-tab-button>
+      <!-- BOTON DE TAREAS -->
+      <ion-tab-button tab="fav">
+        <ion-icon id="pressIcon" name="reader" color="dark"></ion-icon>
+      </ion-tab-button>
+      <!-- BOTON DE PREMIOS -->
+      <ion-tab-button tab="exit" (click)="goToPrizes()">
+        <ion-icon name="gift-outline" color="dark"></ion-icon>
+      </ion-tab-button>
+    </ion-tab-bar>
+  </ion-tabs>
 </ion-content>
