--- a/src/app/pages/users/users.page.html
+++ b/src/app/pages/users/users.page.html
@@ -2,6 +2,7 @@
   <ion-toolbar>
     <ion-icon slot="start" style="margin-left: 10px;" (click)="goLoginPage()" name="arrow-back"></ion-icon>
     <ion-title>Users</ion-title>
+    <ion-icon slot="end" style="margin-right: 10px;" (click)="goAddUserPage()" name="add"></ion-icon>
   </ion-toolbar>
 </ion-header>
 
