Usuario y tareas funcionando

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -40,7 +40,7 @@ ion-input {
   --color: grey;
   border-radius: 0.5em;
   top: 35px;
-  width: 180px;
+  width: 83%;
   font-family: Bai;
   left: 20px;
 }
