--- a/src/app/pages/edit-user/edit-user.page.html
+++ b/src/app/pages/edit-user/edit-user.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Create User</ion-title>
+    <ion-title class="ion-text-center" >Create User</ion-title>
   </ion-toolbar>
 </ion-header>
 
