--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -18,6 +18,10 @@ h1 {
   font-family: Bai;
 }
 
+ion-input{
+  --padding-start: 10px;
+}
+
 #contenedor {
   // position: absolute;
   // top: 80px;
